--- a/css/style.css
+++ b/css/style.css
@@ -402,3 +402,23 @@ body {
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   background-color: var(--white-content);
 }
+.contact-link-icon {
+  margin-right: 8px;
+}
+.link:hover svg {
+fill: #2196F3;
+
+}
+.icon-background {
+  width: 270px;
+
+  background-color: #F5F4FA;
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.des-icon {
+  background-color: #F5F4FA;
+
+}
