--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,9 @@ body {
   text-decoration: none;
 }
 .first-background {
-  background-image: url(../images/background.jpg);
-  background-color: var(--background-color);
+  background: linear-gradient(59deg, rgba(0, 0, 0, 0.052) ,rgba(217, 217, 217, 0.896)), url(../images/background.jpg);
+  background-size: cover;
+  /* background-image: linear-gradient(59deg, rgba(0, 0, 0, 0.052) ,rgba(217, 217, 217, 0.896)); */
   color: var(--white-content);
   padding-top: 200px;
   height: 450px;
@@ -243,7 +244,7 @@ body {
 .person-box {
   background-color: var(--white-content);
   width: 270px;
-  /* height: 368px; */
+  
   display: flex;
   flex-wrap: wrap;
   margin-inline: 10px;
@@ -252,8 +253,7 @@ body {
 
   padding: 0px;
   border-radius: 4px;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+ box-shadow: -1px 19px 34px 6px #ABABAB;
 }
 
 .name-position {
@@ -360,6 +360,7 @@ body {
 .button-portfolio:hover {
   background-color: var(--logo-color);
   color: var(--white-content);
+  box-shadow: -3px 12px 18px 5px #A6A6A6;
 }
 .button-portfolio:focus {
   background-color: var(--logo-color);
@@ -381,6 +382,14 @@ body {
   border-radius: 0px;
   margin: 0;
   padding: 0;
+}
+.item-box:hover{
+  box-shadow: 1px 4px 6px 0px #00000029;
+
+box-shadow: 0px 4px 4px 0px #0000000F;
+
+box-shadow: 0px 1px 1px 0px #0000001F;
+box-shadow: -3px 12px 18px 11px #A6A6A6;
 }
 .item {
   padding-left: 0;
@@ -461,4 +470,7 @@ line-height: 16px;
 letter-spacing: 0.03em;
 text-align: left;
 color: var(--white-content)
+}
+.social-footer {
+
 }
